--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="sp">
 
-<!-- Mirrored from hoic.ga/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 06 Oct 2021 11:50:39 GMT -->
+
 <head><meta http-equiv="Content-Type" content="text/html; charset=gb18030">
 	<title>HOWC (High Orbit Web Cannon)</title>
 	
@@ -57,7 +57,7 @@ document.onmouseup = mousehandler;
 				<td>
 					<fieldset class="layer2">
 						<legend>1. Select your target</legend>
-						<input type="text" id="target" value="http://lincolnproject.us" />
+						<input type="text" id="target" value="example.com" />
 					</fieldset>
 				</td>
 				<td>
@@ -106,7 +106,6 @@ document.onmouseup = mousehandler;
 			</tr>
 		</table>
 	</div>
-	<p id="footer">Designed by ~Anon~ | <a href= "http://loic.ga/">Low Orbit Web Cannon</a></p>
 	<script language=JavaScript>
 <!--
 
@@ -145,5 +144,4 @@ document.oncontextmenu=new Function("alert(message);return false")
 </script>
 </body>
 
-<!-- Mirrored from hoic.ga/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 06 Oct 2021 11:50:41 GMT -->
 </html>
