--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ document.onmouseup = mousehandler;
 						</div>
 						-->
 						<div class="title">Append Message:</div>
-						<input type="text" id="msg" value="We are Anonymous" />
+						<input type="text" id="msg" value="clouds" />
 					</fieldset>
 				</td>
 			</tr>
